--- a/index.html
+++ b/index.html
@@ -3,10 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Primer parcial</title>
+    <title>Perritos</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>Perritos</h1>
+    <section>
+        <article>
+            <h2>
+                Perritos Aleatorios
+            </h2>
+            <img id="image1" alt="">
+            <button id="btn1">
+                Guardar en favoritos
+            </button>
+        </article>
+        <article>
+            <img src="image2" alt="">
+            <button id="btn2">
+                Guardar en favoritos
+            </button>
+            <img src="image3" alt="">
+            <button id="btn3">
+                Guardar en favoritos
+            </button>
+        </article>
+        <button id="reload" >Recargar</button>
+    </section>
+    <script src="index.js"></script>
 </body>
 </html>
