--- a/index.html
+++ b/index.html
@@ -7,28 +7,38 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Perritos</h1>
+    <span>
+        <h1>Perritos</h1>
+    </span>
     <section>
-        <article>
-            <h2>
-                Perritos Aleatorios
-            </h2>
-            <img id="image1" alt="">
-            <button id="btn1">
-                Guardar en favoritos
-            </button>
+        <article class="container1">
+            <div class="segtitle">
+                <span><h2>Perritos Aleatorios</h2></span>
+            </div>
+            <div class="btn1">
+                <img id="image1" alt="">
+                <button id="btn1">
+                    Guardar en Favoritosq
+                </button>
+            </div>
         </article>
-        <article>
-            <img src="image2" alt="">
-            <button id="btn2">
-                Guardar en favoritos
-            </button>
-            <img src="image3" alt="">
-            <button id="btn3">
-                Guardar en favoritos
-            </button>
+        <article class="container2">
+            <div class="btn2">
+                <img src="image2" alt="">
+                <button id="btn2">
+                    Guardar en favoritos
+                </button>     
+            </div>
+            <div class="btn3">
+                <img src="image3" alt="">
+                <button id="btn3">
+                    Guardar en favoritos
+                </button>
+            </div>
         </article>
-        <button id="reload" >Recargar</button>
+        <div>
+            <button id="reload" >Recargar</button>
+        </div>
     </section>
     <script src="index.js"></script>
 </body>
