--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perritos</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <span>
+    <span class="titulo">
         <h1>Perritos</h1>
     </span>
     <section>
