--- a/index.html
+++ b/index.html
@@ -3,10 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Primer parcial</title>
+    <title>Perritos</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <span class="titulo">
+        <h1>Perritos</h1>
+    </span>
+    <section>
+        <article class="container1">
+            <div class="segtitle">
+                <span><h2>Perritos Aleatorios</h2></span>
+            </div>
+            <div class="btn1">
+                <img id="image1" alt="">
+                <button id="btn1">
+                    Guardar en Favoritosq
+                </button>
+            </div>
+        </article>
+        <article class="container2">
+            <div class="btn2">
+                <img src="image2" alt="">
+                <button id="btn2">
+                    Guardar en favoritos
+                </button>     
+            </div>
+            <div class="btn3">
+                <img src="image3" alt="">
+                <button id="btn3">
+                    Guardar en favoritos
+                </button>
+            </div>
+        </article>
+        <div>
+            <button id="reload" >Recargar</button>
+        </div>
+    </section>
+    <script src="index.js"></script>
 </body>
 </html>
